--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
   "env": {
     "browser": true,
     "es6": true,
+    "jest": true,
     "node": true
   },
 
@@ -16,13 +17,12 @@
     "before": true,
     "it": true,
     "expect": true,
-    "sinon": true
   },
 
   "parser": "babel-eslint",
 
   "plugins": [
-    
+
   ],
 
   "rules": {
